--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
 target
-*.db
-
-*.patch
-.settings
-.project
+/target/
 .classpath
-templates
-*.iml
-.idea
-_DELETE_OLD_README
-bin
+.project
+.settings
+.tern-project
+/bin/
